Update and rename Web Blurb.htm to index.html

--- a/index.html
+++ b/index.html
@@ -1587,7 +1587,7 @@ econometrician with research interests spanning multiple business disciplines.
 He values research that is broad in scope and relevant to both academics and
 practitioners. His work has appeared in leading academic journals including the
 <i>Journal of <span class=GramE>Derivatives<span style='font-style:normal'>, <span
-style='mso-spacerun:yes'> </span></span>Journal</span> of Consumer Affairs,
+style='mso-spacerun:yes'>Â </span></span>Journal</span> of Consumer Affairs,
 Journal of Banking and Finance</i>, <i>Journal of Empirical Finance</i>, <i>Review
 of Economics and Statistics</i>, <i>Journal of Business and Economic Statistics</i>,
 <i>Journal of Econometrics</i>, and <i>Journal of Applied Econometrics</i>.<o:p></o:p></span></p>
@@ -1603,15 +1603,15 @@ Schweser, and various corporate training programs.<o:p></o:p></span></p>
 <p class=MsoNormal style='margin-top:12.0pt;line-height:150%'><span
 style='font-family:"Calibri",sans-serif'>In addition to his research, Dr.
 Jaggia has made a lasting impact on academia as an author of three widely
-acclaimed textbooks—<i>Business Statistics</i>, <i>Essentials of Business
-Statistics</i>, and <i>Business Analytics</i>—which rank among McGraw-Hill’s
+acclaimed textbooksÂ—<i>Business Statistics</i>, <i>Essentials of Business
+Statistics</i>, and <i>Business Analytics</i>Â—which rank among McGraw-HillÂ’s
 most successful publications. He is currently developing a new textbook on <i>Applied
 Econometrics and Data Analysis</i>.<o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;line-height:150%'><span
 style='font-family:"Calibri",sans-serif'>As Associate Dean, Dr. Jaggia
-spearheaded the successful launch of the MS in Business Analytics—one of the
-nation’s first such programs. From initial vision to curriculum development, it
+spearheaded the successful launch of the MS in Business AnalyticsÂ—one of the
+nationÂ’s first such programs. From initial vision to curriculum development, it
 has since evolved into a highly successful and nationally recognized program.<o:p></o:p></span></p>
 
 </div>
