--- a/index.html
+++ b/index.html
@@ -1576,9 +1576,9 @@ style='mso-no-proof:yes'><!--[if gte vml 1]><v:shapetype id="_x0000_t75"
  <o:lock v:ext="edit" aspectratio="t"/>
 </v:shapetype><v:shape id="Picture_x0020_1" o:spid="_x0000_i1025" type="#_x0000_t75"
  style='width:143.4pt;height:180pt;visibility:visible;mso-wrap-style:square'>
- <v:imagedata src="Web%20Blurb_files/image001.jpg" o:title=""/>
+ <v:imagedata src="image001.jpg" o:title=""/>
 </v:shape><![endif]--><![if !vml]><img width=191 height=240
-src="Web%20Blurb_files/image001.jpg" v:shapes="Picture_x0020_1"><![endif]></span><span
+src="image001.jpg" v:shapes="Picture_x0020_1"><![endif]></span><span
 style='font-family:"Calibri",sans-serif'><o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;line-height:150%'><span
@@ -1619,4 +1619,5 @@ has since evolved into a highly successful and nationally recognized program.<o:
 </body>
 
 </html>
+
 
