--- a/index.html
+++ b/index.html
@@ -1596,22 +1596,22 @@ of Economics and Statistics</i>, <i>Journal of Business and Economic Statistics<
 style='font-family:"Calibri",sans-serif'>Dr. Jaggia has been honored by
 students with Outstanding Faculty awards in different years in <i>Economics</i>,
 <i>Finance</i>, and the <i>MS in Business Analytics</i> programs. He has also
-delivered lectures on <i>statistics</i>, business forecasting, and quantitative
-methods to business professionals through the CFA Society Boston, Kaplan
+delivered lectures on <i>statistics</i>, <i>business forecasting</i>, and <i>quantitative
+methods</i> to business professionals through the CFA Society Boston, Kaplan
 Schweser, and various corporate training programs.<o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;line-height:150%'><span
 style='font-family:"Calibri",sans-serif'>In addition to his research, Dr.
 Jaggia has made a lasting impact on academia as an author of three widely
-acclaimed textbooks<i>Business Statistics</i>, <i>Essentials of Business
-Statistics</i>, and <i>Business Analytics</i>which rank among McGraw-Hills
+acclaimed textbooks <i>Business Statistics</i>, <i>Essentials of Business
+Statistics</i>, and <i>Business Analytics</i> which rank among McGraw-Hill
 most successful publications. He is currently developing a new textbook on <i>Applied
 Econometrics and Data Analysis</i>.<o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;line-height:150%'><span
 style='font-family:"Calibri",sans-serif'>As Associate Dean, Dr. Jaggia
-spearheaded the successful launch of the MS in Business Analyticsone of the
-nations first such programs. From initial vision to curriculum development, it
+spearheaded the successful launch of the MS in Business Analytics, one of the
+first such programs in the U.S. From initial vision to curriculum development, it
 has since evolved into a highly successful and nationally recognized program.<o:p></o:p></span></p>
 
 </div>
@@ -1619,5 +1619,6 @@ has since evolved into a highly successful and nationally recognized program.<o:
 </body>
 
 </html>
+
 
 
